src/test/ui/never_type/issue-51506.stderr
error[E0277]: `!` is not an iterator
  --> $DIR/issue-51506.rs:13:5
   |
LL |     type Out: Iterator<Item = u32>;
   |     ------------------------------- required by `Trait::Out`
...
LL |     default type Out = !;
   |     ^^^^^^^^^^^^^^^^^^^^^ `!` is not an iterator
   |
   = help: the trait `Iterator` is not implemented for `!`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
